--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -8,6 +8,17 @@ a:hover{
     text-decoration: underline;
 }
 
+/*Boton de Regreso*/
+.back__button{
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 0.5% 2% 1% 0.5%;
+    border-radius: 0% 30% 50% 60%;
+    background-color: #b2f7bb;
+    color: #000000;
+}
+
 /*Sección index*/
 /*menu*/
 
