--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -4,9 +4,11 @@ a {
     color: #000000;
 }
 
+
 a:hover{
     text-decoration: underline;
 }
+
 
 /*Boton de Regreso*/
 .back__button{
@@ -29,8 +31,6 @@ a:hover{
 .menu__list{
     display: flex;
     justify-content: space-around;
-
-
 }
 
 #menu__tittle{
@@ -88,6 +88,51 @@ a:hover{
     background-color: #ffffff;
 }
 
+/*Sección menu*/
+
+.menu__entradas, .menu__carnes, .menu__comida__mar, .menu__pasta{
+    color: #000000;
+    display: block;
+    width: 100%;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1em;
+}
+.menu__box{
+    width: 100%;
+}
+
+.nombre__comida{
+    text-align: center;
+}
+
+.entradas, .carnes, .comida__mar, .pasta{
+    display: flex;
+    align-items: center;
+
+}
+
+.entradas img, .carnes img, .comida__mar img, .pasta img{
+    width: 200px;
+    height: auto;
+    box-shadow: 5px 5px 5px #102817;
+    display: flex;
+    justify-content: center;
+
+}
+
+.entradas img :hover{
+    box-shadow: 5px 5px 5px black;
+}
+
+.precio {
+    color: #000000;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+}
+
 /*Sección sobreNosotros*/
 
 .tudo{
@@ -95,3 +140,9 @@ a:hover{
     min-height: 100vh;
     color: #ffffff;
 }
+
+
+
+
+
+
