--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -48,13 +48,15 @@ a:hover{
 }
 
 /*Resto de la pagina*/
+
 .mensaje{
     width: 100%;
     min-height: 100vh;
-    background-color: #55833d;
     display: flex;
+    background-color: #406530;
     justify-content: center;
     flex-direction: column;
+    background-repeat:no-repeat ;
 }
 
 
@@ -90,6 +92,12 @@ a:hover{
 
 /*Sección menu*/
 
+.menu__tittle{
+    width: 100%;
+    text-align: center;
+    font-size: 3em;
+}
+
 .menu__entradas, .menu__carnes, .menu__comida__mar, .menu__pasta{
     color: #000000;
     display: block;
@@ -100,6 +108,7 @@ a:hover{
     margin-bottom: 1em;
     text-decoration: underline;
     margin-top: 2%;
+    background-color: #406530;
 }
 .menu__box{
     width: 100%;
@@ -108,7 +117,6 @@ a:hover{
 }
 
 .nombre__comida{
-    color: #000000;
     text-align: center;
     margin-bottom: 3%;
     font-weight: bold;
@@ -134,11 +142,11 @@ a:hover{
 }
 
 .descripcion__producto{
-    color: #000000;
+    width: 75%;
+    margin-left: 13%;
 }
 
 .precio {
-    color: #000000;
     font-weight: bold;
     text-align: center;
     align-items: center;
@@ -152,6 +160,133 @@ a:hover{
     color: #ffffff;
 }
 
+
+/*Sección reservas*/
+.fom{
+    width: 75%;
+    min-height: none;
+
+}
+.arreglo{
+    display: flex;
+}
+.gracias{
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #50f859a0; /* Fondo suave, color azul claro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Ajustar el contenido al alto de la pantalla */
+}
+.container {
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.563);
+    max-width: 500px;
+}
+.grac-letra{
+    color: #333;
+    font-size: 45px;
+    margin-bottom: 10px;
+}
+.grac-letra2{
+    color: #666;
+    font-size: 28px;
+}
+.inicio_reserva{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    justify-content: center;
+    color: #000000;
+    margin: 20px 0px 20px 0px;
+    display: flex;
+    font-weight: bold;
+}    
+.formulario{
+    background-color: #ffffff;
+    margin: auto;
+    padding: 30px;
+    border-radius: 4px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #000000;
+    border: 3px solid #000000;
+}
+.cont_formulario{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #000000;
+    font-size: 15px;
+    margin: 0px;
+    padding: 5px 25px 12px 0px;
+    border-radius: 4px;
+    margin-bottom: 15px;
+    display: flex;
+}
+.res_mesa{
+    display: inline-block;
+    margin: auto;
+}
+.dat_con{
+    display: inline-block;
+    margin: auto;
+}
+.mens_formulario{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #000000;
+    font-size: 15px;
+    padding: 0px 350px 100px 0px;
+    border-radius: 4px;
+    margin-top: 30px;
+
+}
+.formulario .boton{
+    background: blue;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 15px 0px 0px 130px;
+    font-size: 20px;
+    margin-top: 50px;
+    
+}
+.formulario .boton:hover{
+    background-color: aqua;
+    text-decoration: underline;
+    cursor: pointer;
+    padding: 12px;
+    margin: 15px 0px 0px 130px;
+    margin-top: 50px;
+}
+.let_formulario{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #000000;
+    display: flex;
+    margin: 0px;
+    font-size: 1em;
+}
+.let_formulario2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #000000;
+    display: flex;
+    margin: 5px 0px 10px 8px;
+    font-size: 1.5em;
+    font-weight: bold;
+    display: inline-block;
+    padding: 0px 70px 0px 0px;
+}
+
+.mensaje__reserv{
+    width: 100%;
+    min-height: 100vh;
+    background-image: url(../imagenes/fondo.jpeg);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-repeat:no-repeat ;
+}
 
 
 
